[package]
name = "cpus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cpus"
crate-type = ["cdylib"]

[dependencies]
num_cpus = "1.0"
deno_bindgen = "0.5.1"
serde = { version = "1", features = ["derive"] }